--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.9",
+    "moment": "^2.18.1",
     "mysql": "^2.13.0",
     "path": "^0.12.7"
   },
